# modern-opengl-app

./: .gitignore  CMakeLists.txt  README.md
cmake/: SharedMacros.txt
data/shaders/: full.frag  full.frag.spv  full.vert  full.vert.spv
di/test-vector/: CMakeLists.txt
di/test-vector/src/: main.cpp
docs/: boost_di.md  depth_buffer.md  gpu_device_ext.md  modern_cpp.md  platform-di.md  stl17.md  vulkan-di.md  vulkan.md
opengl/hello-world/: CMakeLists.txt
opengl/hello-world/src/: main.cpp
shared/: CMakeLists.txt  application.cpp  application.h  commandbuffer.cpp  commandbuffer.h  commandpool.cpp  commandpool.h  context.cpp  context.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  imageattachmentbinder.h  instance.cpp  instance.h  platform.cpp  platform.h  queue.cpp  queue.h  renderpass.cpp  renderpass.h  resourcepool.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  utils.cpp  utils.h  vulkan.cpp  vulkan.h  window.cpp  window.h
vulkan/ioc/: CMakeLists.txt
vulkan/ioc/src/: main.cpp
vulkan/shader-compilation/: CMakeLists.txt
vulkan/shader-compilation/src/: main.cpp
